tests/fixtures/negative/naming/FunctionParameterNaming.kt
package com.example.naming

fun foo(goodParam: Int, anotherGood: String) {
    println("$goodParam $anotherGood")
}

fun bar(correctName: Double) {
    println(correctName)
}
